# CMakeNote

./: README.md
dynamic_lib/: CMakeLists.txt  add.cpp  add.hpp
executable/: CMakeLists.txt  demo.cpp
installLibHeader/: CMakeLists.txt
installSharedLib/: CMakeLists.txt
static_lib/: CMakeLists.txt
useDynamicLib/: CMakeLists.txt  useDynamicLib.cpp
useFindPackage/: CMakeLists.txt  main.cpp
useFindPackage/cmake/: FindADD.cmake
useStaticLib/: CMakeLists.txt  useStaticLib.cpp
